--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-# Created by https://www.gitignore.io/api/c++,java,linux,macos,gradle,windows,visualstudiocode
+# This gitignore has been specially created by the WPILib team.
+# If you remove items from this file, intellisense might break.
 
+### C++ ###
 # Prerequisites
 *.d
 
@@ -33,6 +35,7 @@
 *.out
 *.app
 
+### Java ###
 # Compiled class file
 *.class
 
@@ -57,6 +60,7 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+### Linux ###
 *~
 
 # temporary files which can be created if a process still has a handle open of a deleted file
@@ -71,6 +75,7 @@ hs_err_pid*
 # .nfs files are created when an open file is removed but is still being accessed
 .nfs*
 
+### macOS ###
 # General
 .DS_Store
 .AppleDouble
@@ -98,12 +103,14 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+### VisualStudioCode ###
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
 
+### Windows ###
 # Windows thumbnail cache files
 Thumbs.db
 ehthumbs.db
@@ -128,6 +135,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+### Gradle ###
 .gradle
 /build/
 
@@ -144,10 +152,11 @@ gradle-app.setting
 # gradle/wrapper/gradle-wrapper.properties
 
 # # VS Code Specific Java Settings
+# DO NOT REMOVE .classpath and .project
 .classpath
 .project
 .settings/
 bin/
 
-
-# End of https://www.gitignore.io/api/c++,java,linux,macos,gradle,windows,visualstudiocode
+# Simulation GUI and other tools window save file
+*-window.json
