Added Moving Hook Speed (Janky)
Moving hook speed in the teleop

Co-Authored-By: dewnielc <73573767+dewnielc@users.noreply.github.com>

--- a/networktables.ini
+++ b/networktables.ini
@@ -6,5 +6,6 @@ double "/Shuffleboard/Teleop/Deadzone"=0.118089
 double "/Shuffleboard/Teleop/Deploy Speed"=1
 double "/Shuffleboard/Teleop/Drive Speed"=1
 boolean "/Shuffleboard/Teleop/Left Inverted"=false
+double "/Shuffleboard/Teleop/MovingHookEntry"=0.3157
 boolean "/Shuffleboard/Teleop/Right Inverted"=false
 double "/Shuffleboard/Teleop/Suck Speed"=0.5
