--- a/networktables.ini
+++ b/networktables.ini
@@ -7,6 +7,9 @@ double "/Shuffleboard/Teleop/Deploy Speed"=1
 double "/Shuffleboard/Teleop/Drive Speed"=1
 double "/Shuffleboard/Teleop/Elevated Hook Speed"=1
 boolean "/Shuffleboard/Teleop/Left Inverted"=false
+double "/Shuffleboard/Teleop/Middle Hook Deadzone"=0.1
 double "/Shuffleboard/Teleop/Moving Hook Speed"=1
+double "/Shuffleboard/Teleop/Rev Intake Speed"=0.5
+double "/Shuffleboard/Teleop/Rev Outtake Speed"=1
 boolean "/Shuffleboard/Teleop/Right Inverted"=false
 double "/Shuffleboard/Teleop/Suck Speed"=0.5
