added button for holding intake, and switched to climbing xbox controller

--- a/networktables.ini
+++ b/networktables.ini
@@ -5,6 +5,7 @@ double "/Shuffleboard/Teleop/Blow Speed"=1
 double "/Shuffleboard/Teleop/Deadzone"=0.083799
 double "/Shuffleboard/Teleop/Deploy Speed"=1
 double "/Shuffleboard/Teleop/Drive Speed"=1
+double "/Shuffleboard/Teleop/Elevated Hook Deadzone"=0.0811966
 double "/Shuffleboard/Teleop/Elevated Hook Speed"=1
 boolean "/Shuffleboard/Teleop/Left Inverted"=false
 double "/Shuffleboard/Teleop/Middle Hook Deadzone"=0.1
